--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,9 +1,75 @@
-body {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    background-image: url(/ASSETS/schnauzer_fondo.jpeg);    
-    background-size: cover;
+body {
+    background-image: url(/ASSETS/schnauzer_fondo.jpeg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size:cover;
     background-color: rgba(0, 0, 0, 0.493);
     z-index: 1;
     background-blend-mode: darken;
+    /* background-color: black; */
+    min-height: 100vh;
+    color: antiquewhite;
+    font-size: larger;
+}
 
+main {
+    height: 67vh; 
+}
+
+.navbar {
+    background-color:transparent!important ;
+}
+
+.nav-link {
+    font-size: x-large;
+    color: antiquewhite!important;
+}
+
+.nav-link:hover {
+    color: white!important;  
+}
+
+.active {
+    color: white!important;
+    border-bottom: 0.2rem solid white;
+}
+
+.active:hover {
+    color: antiquewhite!important;  
+    text-decoration: dashed;
+}
+
+.rowfooter {
+    text-align: center;
+}
+
+.footer {
+    background-color: transparent!important;
+    color: antiquewhite!important;
+    border-top:ridge antiquewhite;
+}
+
+.footericons {
+    text-decoration: none;
+}
+
+.logoTop {
+    max-height: 8rem;
+    padding: 0.5rem 2rem;
+}
+
+.navbar-collapse {
+    margin-right: 2rem;
+}
+
+.navbar-toggler {
+    color: antiquewhite!important;
+    background-color: antiquewhite;
 }
