--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,26 +3,39 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+header {
+	height: 10vh;
+	
+}
 body {
     background-image: url(/ASSETS/schnauzer_fondo.jpeg);
-    background-position: center center;
-    background-repeat: no-repeat;
     background-position: center center;
     background-size:cover;
     background-color: rgba(0, 0, 0, 0.493);
     z-index: 1;
     background-blend-mode: darken;
-    /* background-color: black; */
-    min-height: 100vh;
-    color: antiquewhite;
+    color: white;
     font-size: larger;
 }
-
 main {
-    height: 67vh; 
+	min-height: 85vh;
 }
 
+footer {
+height: 5vh;
+background-color: black;
+}
+
+h1 {
+	display: flex;
+	justify-content: center;
+	font-size: 15rem;
+	
+}
+h2, h3 {
+	text-align: center;
+	
+}
 .navbar {
     background-color:transparent!important ;
 }
@@ -51,7 +64,7 @@ main {
 }
 
 .footer {
-    background-color: transparent!important;
+    
     color: antiquewhite!important;
     border-top:ridge antiquewhite;
 }
@@ -72,4 +85,28 @@ main {
 .navbar-toggler {
     color: antiquewhite!important;
     background-color: antiquewhite;
+}
+
+.contacto {
+	width: 40rem;
+	
+	border-radius: 2rem;
+	margin-right: 8rem;
+}
+
+.carousel {
+	width: 50rem;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+}
+.container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+img {
+	width: 100%;
+	height: 30rem;
 }
