--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 header {
-	height: 10vh;
+	min-height: 10vh;
 	
 }
 body {
@@ -105,8 +105,4 @@ h2, h3 {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-}
-img {
-	width: 100%;
-	height: 30rem;
 }
