--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -106,3 +106,21 @@ h2, h3 {
 	align-items: center;
 	flex-direction: column;
 }
+/* Imagen gatito*/
+h4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    background-image: url(../ASSETS/GatitoJuguete.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 35vh;
+    width: 100%;
+}
+.imagen-gatito {
+    display: flex;
+    justify-content: center;
+
+}
