--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ header {
 	
 }
 body {
-    background-image: url(/ASSETS/schnauzer_fondo.jpeg);
+    background-image: url(../ASSETS/schnauzer_fondo.jpeg);
     background-position: center center;
     background-size:cover;
     background-color: rgba(0, 0, 0, 0.493);
@@ -105,4 +105,16 @@ h2, h3 {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+}
+.car-button{
+	text-decoration: none;
+	padding-left: 1rem;
+	height: 60px;
+	width: 60px;
+	border-radius: 100%;
+	background-color: #588157;
+	box-shadow: 0px 3px 12px rgba(0,0,0,0.2);
+	position: fixed;
+	bottom: 90px;
+	right: 30px;	
 }
