--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ header {
 	
 }
 body {
-    background-image: url(/ASSETS/schnauzer_fondo.jpeg);
+    background-image: url(../ASSETS/pasto.jpg);
     background-position: center center;
     background-size:cover;
     background-color: rgba(0, 0, 0, 0.493);
@@ -18,11 +18,10 @@ body {
     font-size: larger;
 }
 main {
-	min-height: 85vh;
+	min-height: 78.2vh;
 }
 
 footer {
-height: 5vh;
 background-color: black;
 }
 
@@ -30,14 +29,26 @@ h1 {
 	display: flex;
 	justify-content: center;
 	font-size: 2rem;
-	
+    font-family:'Licorice', cursive;
+}
+h2, h5 {
+    font-family:'Licorice', cursive;
 }
 h2, h3 {
 	text-align: center;
 	
 }
+/* Index */
+.presentacion{
+    color: white;
+    -webkit-text-stroke:.8px black;
+    font-family:cursive;
+    font-size: 1.3rem ;
+    width: 40rem;
+}
 .navbar {
     background-color:transparent!important ;
+    font-family:'Licorice', cursive;
 }
 
 .nav-link {
@@ -161,3 +172,56 @@ h6 {
     
 }
 
+
+/* Botn Carrito */
+.car-button{
+	text-decoration: none;
+	padding-left: 1rem;
+	height: 60px;
+	width: 60px;
+	border-radius: 100%;
+	background-color: #588157;
+	box-shadow: 0px 3px 12px rgba(0,0,0,0.2);
+	position: fixed;
+	bottom: 90px;
+	right: 30px;	
+}
+.oculto{
+	display: none;
+}
+.card-img{
+	width: 100%;
+}
+.footer-card-text{
+	margin: 0;
+	color: white;
+	text-align: center;
+}
+
+/* Esteban contacto*/
+
+.mapText p {
+    min-width: 10vw;
+}
+
+.map-responsive{
+overflow:hidden;
+padding-bottom:56.25%;
+position:relative;
+height:0;
+
+}
+
+.map-responsive iframe{
+left:0;
+top:0;
+height:100%;
+width:100%;
+position:absolute;
+
+}
+
+.row {
+    margin-right: 0!important;
+    margin-left: 0!important;
+} 
