--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,8 +17,10 @@ body {
     color: white;
     font-size: larger;
 }
+
+
 main {
-	min-height: 78.2vh;
+	min-height: 82vh;
 }
 
 footer {
@@ -33,12 +35,17 @@ h1 {
 }
 h2, h5 {
     font-family:'Licorice', cursive;
+    margin-top: 2rem;
 }
 h2, h3 {
 	text-align: center;
 	
 }
 /* Index */
+.div1 {
+    margin-bottom: 2rem;
+    text-align: center;
+}
 .presentacion{
     color: white;
     -webkit-text-stroke:.8px black;
@@ -89,6 +96,23 @@ h2, h3 {
     padding: 0.5rem 2rem;
 }
 
+@media (max-width: 425px){
+    .logoTop {
+        transform: translateX(120px);
+    }
+}
+@media (max-width: 375px){
+    .logoTop {
+        transform: translateX(80px);
+    }
+}
+@media (max-width: 320px){
+    .logoTop {
+        transform: translateX(60px);
+    }
+}
+
+
 .navbar-collapse {
     margin-right: 2rem;
 }
@@ -97,7 +121,9 @@ h2, h3 {
     color: antiquewhite!important;
     background-color: antiquewhite;
 }
-
+.nav-link {
+    text-align: center;
+}
 .contacto {
 	width: 40rem;
 	
@@ -106,11 +132,17 @@ h2, h3 {
 }
 
 .carousel {
-	width: 50rem;
 	height: 100%;
 	display: flex;
 	justify-content: center;
 }
+@media (min-width: 776px ){
+    .carousel {
+        width: 50rem;
+    }
+    ;
+}
+
 .container {
 	display: flex;
 	justify-content: center;
@@ -185,6 +217,12 @@ h6 {
 	position: fixed;
 	bottom: 90px;
 	right: 30px;	
+}
+@media (max-width: 580px){
+    .car-button {
+        bottom: 140px;
+
+    }
 }
 .oculto{
 	display: none;
