--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,6 +42,9 @@ h2, h3 {
 	
 }
 /* Index */
+.carousel-inner {
+    border-radius: 10px;
+}
 .div1 {
     margin-bottom: 2rem;
     text-align: center;
